--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--title-->
-    <title>Paxlar PSD to HTML</title>
+    <title>Paxlar</title>
     <!--title--> 
     
     <!--bootstrap-->
